Enable dependabot updates for all dependencies
Prior to #114 (9d6f7edb3e9f1b265ca8c57bdf711f284fe0df43) our dependabot
config permitted automatic pull requests for package security fixes and
for releases to other projects owned by us.

When dependabot moved to Github and reconfigured itself via #114, only
the projects listed as owned by us remained enabled, so exodus-lambda
stopped receiving updates for all other dependencies.

This commit changes exodus-lambda's dependabot config to allow pull
requests for all dependency types, making it consistent with the newer
exodus-gw project.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,8 @@
 version: 2
 updates:
 - package-ecosystem: pip
-  directory: "/"
+  directory: /
   schedule:
-    interval: daily
-  open-pull-requests-limit: 10
+    interval: weekly
   allow:
-  - dependency-name: cdn-definitions
+  - dependency-type: all
